# RME-Python

./: .codexignore  .gitignore  .pre-commit-config.yaml  ALL_ISSUES_RESOLVED_REPORT.md  CanaryMapEditor.spec  FINAL_ACTIONS_REPORT.md  IMPROVEMENT_REPORT.md  INTELLIGENT_BRUSH_SYSTEM_SUMMARY.md  P0_COMPLETION_REPORT.md  QUALITY_FINAL_SUMMARY.md  QUALITY_IMPROVEMENTS.md  QUALITY_IMPROVEMENT_PROPOSAL.md  QUALITY_PIPELINE_V2.2_SUMMARY.md  QUALITY_PIPELINE_V2.3_SUMMARY.md  QUALITY_RUN_SUMMARY_v2.3.md  Taskfile.yml  commit_output.txt  complete_log_analysis_20260130_150555.txt  git_log.txt  git_status.txt  git_status_2.txt  git_status_3.txt  git_status_final.txt  git_status_last.txt  git_status_last_check.txt  git_status_partial_rm.txt  git_status_staged.txt  gitstatus.txt  grep_output.txt  grep_usage.txt  measure_performance.py  mypy.ini  output.txt  process_v2.3_logs.sh  pyproject.toml  quality.sh  quality_performance_log.txt  quality_report.txt  quality_scan_report.md  reproduce_dialogs.py  (+11 more)
.github/instructions/: memory.instruction.md
.github/jules/: suggestions.schema.json
.github/workflows/: ci.yml  codex_review_for_jules_prs.yml  codex_review_manual.yml  codex_review_scheduler.yml  jules-on-issue-label.yml  jules-security-agent.yml  jules_linear_refactors.yml  jules_linear_tests.yml  jules_linear_uiux.yml  release_update_manifest.yml
codex/: README.md  agents.md  review_jules_pr.md
codex/agents/: architect.md  frontend_specialist.md  legacy_expert.md  quality_engineer.md
codex/guides/: agent_workflow.md  agents-md-guide.md  extending_codex.md  knowledge_retrieval.md  porting_workflow.md  rules-guide.md  skills-guide.md  testing.md  tool_usage.md  uixwidget_scope.md  workflows.md
codex/rules/: development.md  execution.rules
codex/skills/: create_widget.md  port_feature.md  verify_parity.md
data/: brushes.json
prompts/: stitch_continuation.txt  uiux_continuation.txt
py_rme_canary/: .gitattributes  .gitignore  PY_RME_ENV.md  PyRME_Canary.spec  __init__.py  capture_log.txt  capture_log_2.txt  capture_log_3.txt  capture_log_4.txt  capture_log_5.txt  capture_log_6.txt  capture_log_7.txt  debug_import.py  debug_qt_instantiation.py  git_changes.txt  rme_multi_ide_setup.py  rme_setup_readme.md  rme_workflows_complete.md  setup.py  test_core.py  test_output.txt  test_results.txt  test_results_final.txt
py_rme_canary/.quality_reports/: phase4_verification.json  ruff_baseline.json
py_rme_canary/client_files/: README.md
py_rme_canary/core/: __init__.py  brush_manager.py  memory_guard.py  runtime.py  version.py
py_rme_canary/data/: __init__.py  brushes.json
py_rme_canary/docs/: ANALISE_FALTANTE.md  ARCHITECTURE.md  CHANGELOG.md  DOCUMENTATION_AUDIT.md  DOCUMENTATION_REFACTOR_SESSION_SUMMARY.md  FINAL_AUDIT_SUMMARY.md  GAP_ANALYSIS_AND_PRIORITY_TODO.md  IMPLEMENTACAO_2026-01-28.md  IMPLEMENTATION_SESSION_2026-01-23.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_TODO.md  INDEX.md  INTELLIGENT_BRUSH_SYSTEM.md  PRD.MD  PRD.md  PROJECT_STRUCTURE.md  QUALITY_CHECKLIST.md  README.md  ROLLOUT_PLAN.md  TECHNOLOGY_IMPLEMENTATION_DETAILS.md  TODO_EXPENSIVE.md  VERSION_AWARE_ITEMS_DETECTION.md  VERSION_MAPPING.md  VERSION_VERIFICATION.md  WALKTHROUGH.md  agents.md  antigravity_workflow.md  config.toml  features.md  memory_instruction.md  migration_strategy.md  quality_improvements_changelog.md  quality_pipeline_guide.md  quick_reference.md
py_rme_canary/examples/: asset_loading_example.py  browse_tile_example.py  context_menu_integration.py  integration_demo.py
py_rme_canary/logic_layer/: __init__.py  asset_manager.py  auto_border.py  autosave_manager.py  brush_definitions.py  brush_settings.py  clipboard.py  context_menu_handlers.py  cross_clipboard.py  door_brush.py  drawing_options.py  editor_session.py  eraser_brush.py  fill_tool.py  flag_brush.py  friends_client.py  geometry.py  hotkey_manager.py  house_brush.py  house_exit_brush.py  item_type_detector.py  lasso_selection.py  map_diff.py  map_format_conversion.py  map_metadata_actions.py  map_search.py  map_statistics.py  minimap_exporter.py  minimap_png_exporter.py  mirroring.py  monster_brush.py  networked_action_queue.py  npc_brush.py  optional_border_brush.py  png_exporter.py  raw_brush.py  remove_items.py  render_optimizer.py  replace_items.py  ruler_tool.py  (+13 more)
py_rme_canary/quality-pipeline/: QUALITY_PIPELINE_V2.md  QUALITY_TODOS.md  flake.nix  pyproject.toml  quality.sh  quality_lf.sh  quality_pipeline_v1.md  verify_p4.bat
py_rme_canary/quality-pipeline/config/: quality.yaml
py_rme_canary/quality-pipeline/modules/: antigravity_integration.sh  copilot_integration.sh  llm_rule_generator.sh
py_rme_canary/quality-pipeline/workers/: ai_agent.py  antigravity_client.py  copilot_client.py  monorepo_discovery.py  phase4_verifier.py  pool_manager.py  rule_generator.py
py_rme_canary/quality-pipeline/workers-rust/src/: lib.rs
py_rme_canary/release/: channels.json  update_manifest.schema.json  update_policy.xml
py_rme_canary/reports/: issues_normalized.json
py_rme_canary/rust/: .gitignore  README.md
py_rme_canary/rust/py_rme_canary_rust/: Cargo.toml  README.md  pyproject.toml
py_rme_canary/rust/py_rme_canary_rust/src/: lib.rs
py_rme_canary/scripts/: ast_auto_split.py  build_exe.py  build_jules_context.py  compare_with_baseline.py  jules_api.py  jules_runner.py  normalize_issues.py  playwright_mcp_full_suite.js  playwright_mcp_smoke.js
py_rme_canary/tests/: conftest.py  test_smoke_core.py
py_rme_canary/tools/: __init__.py  export_brushes_json.py  minimap_export.py  read_otbm_header.py  updater.py  validate_doodads_in_memory.py
tools/: build.py  release.py
(+614 files in other folders)
