[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "py_rme_canary_rust"
version = "0.1.0"
description = "Optional Rust extension with CPU-bound accelerators for py_rme_canary."
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
]
